--- a/.github/workflows/upload-to-s3.yml
+++ b/.github/workflows/upload-to-s3.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1   # Or your AWS region
+          aws-region: us-east-2   # Or your AWS region
 
       - name: Upload images to S3
         run: |
-          aws s3 sync images s3://your-bucket-name/images --delete
+          aws s3 sync images s3://FinalPrjBucket/images --delete
